<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <!--    波浪背景和头像-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:text="我的"
            android:textSize="16dp"
            android:textColor="@color/white" />

        <com.kingsley.zteshop.widget.WaveView
            android:id="@+id/wave_view"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="bottom" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_gray_deepgray"
        android:padding="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/favorite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/favorite"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_gray_deepgray"
        android:padding="6dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/location" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/setting"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_gray_deepgray"
        android:padding="6dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/about" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/about"
             />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_marginTop="20dp"
        android:id="@+id/fab"
        android:src="@drawable/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right" />

</LinearLayout>